kubernetes/demo-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: demo-client
  name: demo-client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: demo-client
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo-net: "true"
        io.kompose.service: demo-client
    spec:
      containers:
        - env:
            - name: DEMO_WEB_ADDRESS
              value: http://demo-ms:8080
            - name: DEMO_WEB_HOST
              value: demo-ms
            - name: DEMO_WEB_PORT
              value: "8080"
            - name: FILE_DEST_FOLDER
              value: /home/Downloads
          image: lucas2738/demo-client:0.0.1-SNAPSHOT
          livenessProbe:
            exec:
              command:
                - exit 0
          name: demo-client
          ports:
            - containerPort: 8781
          resources: {}
          volumeMounts:
            - mountPath: /logs
              name: demo-client-claim0
            - mountPath: /app/config
              name: demo-client-claim1
            - mountPath: /home/Downloads
              name: demo-client-claim2
      restartPolicy: Always
      volumes:
        - name: demo-client-claim0
          persistentVolumeClaim:
            claimName: demo-client-claim0
        - name: demo-client-claim1
          persistentVolumeClaim:
            claimName: demo-client-claim1
        - name: demo-client-claim2
          persistentVolumeClaim:
            claimName: demo-client-claim2
status: {}
