kubernetes/filebeat-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.network/demo-net: "true"
    io.kompose.service: filebeat
  name: filebeat
spec:
  containers:
    - args:
        - -e
        - --strict.perms=false
      image: docker.elastic.co/beats/filebeat:6.2.2
      name: filebeat
      resources: {}
      volumeMounts:
        - mountPath: /usr/share/filebeat/filebeat.yml
          name: filebeat-claim0
          readOnly: true
        - mountPath: /var/lib/docker/containers
          name: filebeat-claim1
          readOnly: true
        - mountPath: /var/run/docker.sock
          name: filebeat-claim2
          readOnly: true
        - mountPath: /usr/share/filebeat/data
          name: filebeat-claim3
  restartPolicy: OnFailure
  volumes:
    - name: filebeat-claim0
      persistentVolumeClaim:
        claimName: filebeat-claim0
        readOnly: true
    - name: filebeat-claim1
      persistentVolumeClaim:
        claimName: filebeat-claim1
        readOnly: true
    - name: filebeat-claim2
      persistentVolumeClaim:
        claimName: filebeat-claim2
        readOnly: true
    - name: filebeat-claim3
      persistentVolumeClaim:
        claimName: filebeat-claim3
status: {}
