kubernetes/kafdrop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: kafdrop
  name: kafdrop
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafdrop
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo-net: "true"
        io.kompose.service: kafdrop
    spec:
      containers:
        - env:
            - name: JVM_OPTS
              value: -Xms32M -Xmx64M
            - name: KAFKA_BROKERCONNECT
              value: kafka:9093
            - name: SERVER_SERVLET_CONTEXTPATH
              value: /
          image: obsidiandynamics/kafdrop
          name: kafdrop
          ports:
            - containerPort: 9000
          resources: {}
      restartPolicy: Always
status: {}
