kubernetes/kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kibana
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo-net: "true"
        io.kompose.service: kibana
    spec:
      containers:
        - image: docker.elastic.co/kibana/kibana:6.2.2
          name: kibana
          ports:
            - containerPort: 5601
          resources: {}
          volumeMounts:
            - mountPath: /opt/kibana/config/
              name: kibana-claim0
      restartPolicy: Always
      volumes:
        - name: kibana-claim0
          persistentVolumeClaim:
            claimName: kibana-claim0
status: {}
