kubernetes/logstash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: logstash
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo-net: "true"
        io.kompose.service: logstash
    spec:
      containers:
        - args:
            - -f
            - /etc/logstash/conf.d/
          image: docker.elastic.co/logstash/logstash:6.2.2
          name: logstash
          ports:
            - containerPort: 9999
            - containerPort: 5044
          resources: {}
          volumeMounts:
            - mountPath: /etc/logstash/conf.d
              name: logstash-claim0
      restartPolicy: Always
      volumes:
        - name: logstash-claim0
          persistentVolumeClaim:
            claimName: logstash-claim0
status: {}
