kubernetes/mysql-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: mysql-server
  name: mysql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo-net: "true"
        io.kompose.service: mysql-server
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: demo
            - name: MYSQL_PASSWORD
              value: admin
            - name: MYSQL_ROOT_PASSWORD
              value: admin
            - name: MYSQL_USER
              value: root
          image: mysql/mysql-server:latest
          name: mysql-server
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d/schema.sql
              name: mysql-server-claim0
      restartPolicy: Always
      volumes:
        - name: mysql-server-claim0
          persistentVolumeClaim:
            claimName: mysql-server-claim0
status: {}
