kubernetes/postgressql-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: postgressql-server
  name: postgressql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgressql-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/demo-net: "true"
        io.kompose.service: postgressql-server
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: rxdemo
            - name: POSTGRES_PASSWORD
              value: admin
            - name: POSTGRES_USER
              value: root
          image: postgres:latest
          livenessProbe:
            exec:
              command:
                - exit 0
          name: postgressql-server
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /file
              name: postgressql-server-claim0
            - mountPath: /docker-entrypoint-initdb.d/schema.sql
              name: postgressql-server-claim1
      restartPolicy: Always
      volumes:
        - name: postgressql-server-claim0
          persistentVolumeClaim:
            claimName: postgressql-server-claim0
        - name: postgressql-server-claim1
          persistentVolumeClaim:
            claimName: postgressql-server-claim1
status: {}
