kubernetes/demo-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: demo-client
  name: demo-client
spec:
  ports:
    - name: "8781"
      port: 8781
      targetPort: 8781
  selector:
    io.kompose.service: demo-client
status:
  loadBalancer: {}
