kubernetes/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    collect_logs_with_filebeat: "true"
    decode_log_event_to_json_object: "true"
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: demo
  name: demo
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8080
  selector:
    io.kompose.service: demo
status:
  loadBalancer: {}
