kubernetes/kafdrop-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: kafdrop
  name: kafdrop
spec:
  ports:
    - name: "9094"
      port: 9094
      targetPort: 9000
  selector:
    io.kompose.service: kafdrop
status:
  loadBalancer: {}
