kubernetes/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: logstash
  name: logstash
spec:
  ports:
    - name: "9999"
      port: 9999
      targetPort: 9999
    - name: "5044"
      port: 5044
      targetPort: 5044
  selector:
    io.kompose.service: logstash
status:
  loadBalancer: {}
