kubernetes/postgressql-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: postgressql-server
  name: postgressql-server
spec:
  ports:
    - name: "5732"
      port: 5732
      targetPort: 5432
  selector:
    io.kompose.service: postgressql-server
status:
  loadBalancer: {}
